add route for navigation, add positions.json to store all position data and markup (no more editing in index.html, or moving markup around in the dom for fancybox), separating about and positions in loading routine for navigation purposes.

--- a/css/app.css
+++ b/css/app.css
@@ -225,7 +225,12 @@ footer .acc{
 #about > div{
 	min-height:500px;
 }
-
+#about h3{
+	color:#ccc;
+}
+#about p{
+	font-size:20px;
+}
 .onward{
 	text-align:center;
 	background:rgb(221,112,189);
