add prototype hash nag, including positions (by name eventually, but by number for now. hash version is good to go, click version needs to be linked to hash event as well.)

--- a/css/app.css
+++ b/css/app.css
@@ -264,6 +264,7 @@ footer .acc{
   	-webkit-transition-delay: 1s;
     transition-delay: 1s;
   	opacity:1;
+  	display:none;
 }
 #cancer-sutra > div{
 	width:25%;
