--- a/css/mq.css
+++ b/css/mq.css
@@ -1,7 +1,10 @@
 @media (max-width:479px){
 
 	#cancer-sutra > div{
-		width:50%;
+		width:100%;
+	}
+	#cancer-sutra > div:hover img{
+		transform:none;
 	}
 	nav{
 		max-height:0;
@@ -25,12 +28,17 @@
 	#about .onward{background-image:url(../splash/mobile/CS_MobSplash_Illus_5.svg);}
 
 }
-@media (min-width:480px) and (max-width:1200px){
+@media (min-width:480px) and (max-width:768px){
+	#cancer-sutra > div{
+		width:50%;
+	}
+}
+@media (min-width:769px) and (max-width:1200px){
 	#cancer-sutra > div{
 		width:33%;
 	}
 }
-@media (min-width:1200px) and (max-width:990px){*/
+@media (min-width:1200px){*/
 	#cancer-sutra > div{
 		width:25%;
 	}
@@ -56,7 +64,6 @@
 			z-index:200;
 			box-shadow:2px 20px 25px 5px rgba(0,0,0,0.4);
 			border-right:1px solid #999;
-			padding-top:10px;
 		}
 		nav{
 			left:-50%;
