--- a/css/app.css
+++ b/css/app.css
@@ -35,7 +35,7 @@ section{
 	display:none;f
 }*/
 
-.about section#positions,
+.about section#positions-container,
 .positions section#about
 {
 	-webkit-animation: scaleDownCenter .4s ease-in both;
@@ -43,7 +43,7 @@ section{
 }
 
 .about section#about,
-.positions section#positions
+.positions section#positions-container
 {
 	-webkit-animation: scaleUpCenter .4s ease-out both;
 	animation: scaleUpCenter .4s ease-out both;
@@ -69,9 +69,6 @@ section{
 	from { opacity: 0; -webkit-transform: scale(.7); transform: scale(.7); }
 }
 
-a,a:hover,a:active,a:visited{
-	color:#000;
-}
 h1,h2,h3,h4,h5,.uppercase{
 	text-transform: uppercase;
 }
@@ -127,20 +124,18 @@ header p{
 .nav-bar{
 	background:#fdfdfd;
 	z-index:100;
-	overflow: hidden;
 	/*-webkit-transition: max-height 1s ease;
   	-moz-transition: max-height 1s ease;
   	-o-transition: max-height 1s ease;
   	-ms-transition: max-height 1s ease;
   	transition: max-height 1s ease;
 	background:#fdfdfd;*/
-	overflow:hidden;
 }
 .device-menu{
 	position:relative;
-	display:none;
 	z-index:300;
 	border-bottom:1px solid #444;
+	background:#efefef;
 }
 
 .device-menu::after{
@@ -152,7 +147,7 @@ header p{
 	text-align: center;
 	position:absolute;
 	font-size:20px;
-	opacity:0;
+	/*opacity:0;*/
 	-webkit-transition: opacity 0.5s ease;
   	-moz-transition: opacity 0.5s ease;
   	-o-transition: opacity 0.5s ease;
@@ -169,7 +164,6 @@ header p{
 	background:rgb(220,111,188);
 	height:0px;
 	text-align:center;
-	color: #fff!important;
 	font-family: Arial,sans-serif;
 	text-transform: uppercase;
 	vertical-align: middle;
@@ -179,15 +173,26 @@ header p{
   	-o-transition: height 0.5s ease;
   	-ms-transition: height 0.5s ease;
   	transition: height 0.5s ease;
-  	boxshadow
+    -webkit-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.75);
+overflow:hidden;
+}
+.foreplay a{
+	color:#fff;
+	display:inline-block;
+	width:100%;
+	height:100%;
+	padding-top:3px;
+	vertical-align: middle;
 }
 
-.foreplay:hover{
+.foreplay a:hover{
 	text-decoration: none;
 }
 
 .about .nav-bar.scrolling .foreplay{
-	height:25px;
+	height:30px;
 }
 
 .about .filters a{
@@ -248,18 +253,36 @@ header p{
   -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
-
 .navigation{
+	padding:0;
+	margin:0;
+}
+.navigation li{
+	padding:none;
+	margin:none;
+	list-style: none;
+}
+.navigation a{
 	text-align:center;
 	text-transform: uppercase;
 	font-size:1.3em;
 	padding:10px 0;
-	border-bottom:1px solid #000;
 	display:block;
 	width:100%;
+	text-decoration: none;
+	color:#000;
 }
 .navigation:hover{
 	text-decoration: none;
+}
+.about .nav-about{
+	background:#ccc;
+}
+.nav-about{
+	border-bottom:1px solid #ccc;
+}
+.positions .nav-positions{
+	background:#ccc;
 }
 .filters{
 	margin-top:15px;
@@ -289,6 +312,9 @@ header p{
 }
 .filter a[data-toggle="on"]{
 	background:#ccc;
+}
+.about .filter a[data-toggle="on"]{
+	color:#fff;
 }
 
 footer{
@@ -326,6 +352,15 @@ footer .acc{
 	-o-background-size: cover;
 	background-size: cover;
 	overflow:hidden;
+}
+#about > div > div{
+	height:100%;
+}
+.paddingtop25{
+
+}
+.paddingtop50{
+
 }
 #about h3{
 	color:#ccc;
@@ -395,6 +430,31 @@ footer .acc{
     -o-transform:scale(1.18);
      transform:scale(1.18);
 }
+.hover-title{
+	display:none;
+	width:80%;
+	z-index:3;
+	position:absolute;
+	top:35%;
+	text-align: center;
+	background:#fff;
+	background:rgba(255,255,255,0.8);
+	text-transform: uppercase;
+	font-size: 16px;
+	padding:10px 0;
+	border-top:1px solid #666;
+	border-bottom:1px solid #666;
+	cursor:pointer;
+	-webkit-transform:scale(1.18);
+    -moz-transform:scale(1.18);
+    -ms-transform:scale(1.18);
+    -o-transform:scale(1.18);
+     transform:scale(1.18);
+}
+#positions > div:hover .hover-title,
+#positions > div.active .hover-title{
+	display:block;
+}
 #positions > div:hover{
 	z-index:2;
 }
@@ -402,7 +462,7 @@ footer .acc{
 	z-index:1;
 }
 
-/*.intro header{
+/*.intro header{f
 	margin-top:100px;
 }
 .intro nav{
@@ -411,6 +471,64 @@ footer .acc{
 .intro footer{
 	opacity:0;
 }*/
+
+/* CHAPTERS */
+#chapters > div{
+	padding:10px;
+	text-align:center;
+	max-width:768px;
+	margin:0 auto;
+	display:none;
+}
+#chapters > div.open{
+	display:block;
+}
+#chapters > div p{
+	margin:0 auto;
+	margin-bottom:20px;
+}
+#chapters .part2{
+	display:none;
+}
+#chapters .part2.open{
+	display:block
+}
+.expand{
+	font-size:2em;
+	color:rgb(220,111,188);
+	cursor:pointer;
+	padding:10px 0;
+	border-bottom:1px solid #666;
+	
+}
+
+.expand .open{
+	display:none;
+}
+
+.expand.open .closed{
+	display:none;
+}
+.expand.open .open{
+	display:block;
+}
+
+.acrostic{
+	max-width:480px;
+	margin:0 auto;
+	text-align:left;
+}
+.acrostic .row{
+	padding:2px 10px
+}
+.acrostic .letter{
+	font-size:2.5em;
+	color:rgb(220,111,188);
+	text-align:center;
+}
+.acrostic .words{
+	padding:5px 0 0 0;
+}
 
 
 /* FANCY BOX 2*/
@@ -614,4 +732,74 @@ select::-moz-focus-inner,
 input[type="file"] > input[type="button"]::-moz-focus-inner {
     border: 0;
     outline : 0;
+}
+
+/* ANIMATIONS */
+
+/* Hang */
+@-webkit-keyframes hvr-hang {
+0% {
+-webkit-transform: translateY(8px);
+transform: translateY(8px);
+}
+50% {
+-webkit-transform: translateY(4px);
+transform: translateY(4px);
+}
+100% {
+-webkit-transform: translateY(8px);
+transform: translateY(8px);
+}
+}
+@keyframes hvr-hang {
+0% {
+-webkit-transform: translateY(8px);
+transform: translateY(8px);
+}
+50% {
+-webkit-transform: translateY(4px);
+transform: translateY(4px);
+}
+100% {
+-webkit-transform: translateY(8px);
+transform: translateY(8px);
+}
+}
+@-webkit-keyframes hvr-hang-sink {
+100% {
+-webkit-transform: translateY(8px);
+transform: translateY(8px);
+}
+}
+@keyframes hvr-hang-sink {
+100% {
+-webkit-transform: translateY(8px);
+transform: translateY(8px);
+}
+}
+.hvr-hang {
+display: inline-block;
+vertical-align: middle;
+-webkit-transform: translateZ(0);
+transform: translateZ(0);
+box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+-webkit-backface-visibility: hidden;
+backface-visibility: hidden;
+-moz-osx-font-smoothing: grayscale;
+}
+.hvr-hang:hover, .hvr-hang:focus, .hvr-hang:active {
+-webkit-animation-name: hvr-hang-sink, hvr-hang;
+animation-name: hvr-hang-sink, hvr-hang;
+-webkit-animation-duration: .3s, 1.5s;
+animation-duration: .3s, 1.5s;
+-webkit-animation-delay: 0s, .3s;
+animation-delay: 0s, .3s;
+-webkit-animation-timing-function: ease-out, ease-in-out;
+animation-timing-function: ease-out, ease-in-out;
+-webkit-animation-iteration-count: 1, infinite;
+animation-iteration-count: 1, infinite;
+-webkit-animation-fill-mode: forwards;
+animation-fill-mode: forwards;
+-webkit-animation-direction: normal, alternate;
+animation-direction: normal, alternate;
 }
