--- a/css/app.css
+++ b/css/app.css
@@ -173,9 +173,9 @@ header p{
   	-o-transition: height 0.5s ease;
   	-ms-transition: height 0.5s ease;
   	transition: height 0.5s ease;
-    -webkit-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.50);
+	-moz-box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.50);
+	box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.50);
 overflow:hidden;
 }
 .foreplay a{
@@ -347,10 +347,11 @@ footer .acc{
 #about > div{
 	background-repeat: no-repeat;
 	background-position: center center fixed; 
+	background-size:auto 100%;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover;
+	background-size: cover;*/
 	overflow:hidden;
 }
 #about > div > div{
