--- a/css/mq.css
+++ b/css/mq.css
@@ -9,7 +9,6 @@
 	nav{
 		max-height:0;
 		/*display:none;*/
-		padding-top:10px;
 		-webkit-transition: max-height 0.5s ease;
 	  	-moz-transition: max-height 0.5s ease;
 	  	-o-transition: max-height 0.5s ease;
@@ -17,16 +16,18 @@
 	  	transition: max-height 0.5s ease;
 	  	overflow:hidden;
 	  	border-bottom:1px solid #000;
+	  	-webkit-box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.50);
+	-moz-box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.50);
+	box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.50);
 	}
 	nav.open{
 		max-height:100%;
 	}
 
-	#about .one{background-image:url(../splash/mobile/CS_MobSplash_Illus_1.svg);}
-	#about .two{background-image:url(../splash/mobile/CS_MobSplash_Illus_2.svg);}
-	#about .three{background-image:url(../splash/mobile/CS_MobSplash_Illus_3.svg);}
-	#about .four{background-image:url(../splash/mobile/CS_MobSplash_Illus_4.svg);}
-	#about .onward{background-image:url(../splash/mobile/CS_MobSplash_Illus_5.svg);}
+	.about .foreplay{
+		height:30px;
+	}
+
 
 }
 @media (min-width:480px) and (max-width:767px){
@@ -82,6 +83,12 @@
 }
 
 @media (max-width:767px){
+
+	#about .one{background-image:url(../splash/mobile/CS_MobSplash_Illus_1.svg);}
+	#about .two{background-image:url(../splash/mobile/CS_MobSplash_Illus_2.svg);}
+	#about .three{background-image:url(../splash/mobile/CS_MobSplash_Illus_3.svg);}
+	#about .four{background-image:url(../splash/mobile/CS_MobSplash_Illus_4.svg);}
+	#about .onward{background-image:url(../splash/mobile/CS_MobSplash_Illus_5.svg);}
 
 	.detail-image{
 		display:none;
@@ -153,7 +160,6 @@
 		nav{
 			max-height:0;
 			/*display:none;*/
-			padding-top:10px;
 			-webkit-transition: max-height 0.5s ease;
 		  	-moz-transition: max-height 0.5s ease;
 		  	-o-transition: max-height 0.5s ease;
