--- a/css/app.css
+++ b/css/app.css
@@ -72,6 +72,13 @@ section{
 h1,h2,h3,h4,h5,.uppercase{
 	text-transform: uppercase;
 }
+h1{
+	margin:0;
+	padding:0;
+	text-align:center;
+	font-size:20px;
+	padding-top:10px;
+}
 .nopadding {
    padding: 0 !important;
    margin: 0 !important;
@@ -138,7 +145,7 @@ header p{
 	background:#efefef;
 }
 
-.device-menu::after{
+/*.device-menu::after{
 	content:'The Cancer Sutra';
 	text-transform: uppercase;
 	top:10px;
@@ -147,13 +154,12 @@ header p{
 	text-align: center;
 	position:absolute;
 	font-size:20px;
-	/*opacity:0;*/
 	-webkit-transition: opacity 0.5s ease;
   	-moz-transition: opacity 0.5s ease;
   	-o-transition: opacity 0.5s ease;
   	-ms-transition: opacity 0.5s ease;
   	transition: opacity 0.5s ease;
-}
+}*/
 
 .nav-bar.scrolling .device-menu::after{
 	opacity:1;
@@ -254,7 +260,7 @@ overflow:hidden;
   transform: rotate(-45deg);
 }
 nav{
-	display:none;
+	left:-50%;
 }
 .navigation{
 	padding:0;
