--- a/css/mq.css
+++ b/css/mq.css
@@ -8,8 +8,8 @@
 	}
 	nav{
 		height:0;
-		left:0;
-		/*display:none;*/
+		position:static;
+		width:auto;
 		-webkit-transition: height 0.5s ease;
 	  	-moz-transition: height 0.5s ease;
 	  	-o-transition: height 0.5s ease;
@@ -56,7 +56,7 @@
 
 	/* MIN HEIGHT FOR NAV DRAWER */
 	@media (min-height:580px){
-		nav{
+		/*nav{
 			position:fixed;
 			top:45px;
 			width:50%;
@@ -66,10 +66,7 @@
 			z-index:200;
 			box-shadow:2px 20px 25px 5px rgba(0,0,0,0.4);
 			border-right:1px solid #999;
-		}
-		nav{
 			left:-50%;
-			/*display:none;*/
 			-webkit-transition: all 0.5s ease;
 		  	-moz-transition: all 0.5s ease;
 		  	-o-transition: all 0.5s ease;
@@ -78,7 +75,7 @@
 		}
 		nav.open{
 			left:0;
-		}
+		}*/
 	}
 }
 
