--- a/css/app.css
+++ b/css/app.css
@@ -182,7 +182,7 @@ header p{
     -webkit-box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.50);
 	-moz-box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.50);
 	box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.50);
-overflow:hidden;
+	overflow:hidden;
 }
 .foreplay a{
 	color:#fff;
@@ -622,7 +622,7 @@ a.fancybox-close{
 	height: 100%;
 	top: 0;
 	left: 0;
-	background: #000;
+	background: #fff;
 	background: rgba(255,255,255,0.9);
 	overflow-y: scroll;
 	z-index:1000;
@@ -758,6 +758,7 @@ nav{
 	background:#fdfdfd;
 	height:100%;
 	z-index:200;
+	box-shadow:2px 20px 25px 5px #444;
 	box-shadow:2px 20px 25px 5px rgba(0,0,0,0.4);
 	border-right:1px solid #999;
 	left:-50%;
@@ -819,7 +820,6 @@ nav.open{
 	vertical-align: middle;
 	-webkit-transform: translateZ(0);
 	transform: translateZ(0);
-	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	-moz-osx-font-smoothing: grayscale;
