--- a/css/mq.css
+++ b/css/mq.css
@@ -112,6 +112,12 @@
 	}
 }
 
+@media (min-width:480px) and (max-width:767px){
+	nav{
+			width:50%;
+	}
+}
+
 /*@media (max-width:990px){*/
 	header{
 		border-top:none;
