--- a/css/app.css
+++ b/css/app.css
@@ -271,6 +271,7 @@ nav{
 	box-shadow:2px 20px 25px 5px rgba(0,0,0,0.4);
 	border-right:1px solid #999;
 	left:-50%;
+	overlow:hidden;
 	-webkit-transition: all 0.5s ease;
   	-moz-transition: all 0.5s ease;
   	-o-transition: all 0.5s ease;
